# bookops-watchdog

./: .gitignore  README.md  example_config.yaml  pyproject.toml  pytest.ini  requirements.txt
bookops_watchdog/: __init__.py  app.py  config.py  datastore.py  errors.py  logging_config.py  worker_datastore.py  worker_drive.py  worker_email.py  worker_ftp.py  worker_reports.py
tests/: BookOpsQCb.20210801603001  conftest.py  sierra_export_bpl_sample.txt  test_app.py  test_bookops_watchdog.py  test_config.py  test_datastore.py  test_logging_config.py  test_worker_datastore.py  test_worker_drive.py  test_worker_ftp.py  test_worker_reports.py
