[tool.poetry]
name = "bookops-watchdog"
version = "0.1.0"
description = "BookOps cataloging quality control bot"
authors = ["Tomasz Kalata <klingaroo@gmail.com>"]
license = "MIT"
exclude = ["bookops_watchdog/temp.py", "bookops_watchdog/temp/*"]
readme = "README.md"
keywords = ["cataloging", "bibliographic records", "MARC"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.20"
loggly-python-handler = "^1.0.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.4.0"
mypy = "^0.790"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
       | \.git
       | \.hg
       | \.mypy_cache
       | \.tox
       | \.venv
       | _build
       | buck-out
       | build
       | dist
    )/
    | temp.py
)
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
